oxiplate-derive/tests/broken/derive/attribute-path.stderr
error: Must provide either an external or internal template:
       External: #[oxiplate = "/path/to/template/from/templates/directory.txt.oxip"]
       Internal: #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/attribute-path.rs:4:3
  |
4 | #[oxiplate_inline]
  |   ^^^^^^^^^^^^^^^

error: Incorrect syntax for external template. Should look something like:
       #[oxiplate = "/path/to/template/from/templates/directory.txt.oxip"]
 --> tests/broken/derive/attribute-path.rs:8:1
  |
8 | #[oxiplate]
  | ^^^^^^^^^^^
